--- a/settings.gradle
+++ b/settings.gradle
@@ -18,19 +18,27 @@ dependencyResolutionManagement {
 		libs {
 			def mc_major = '1.19'
 			def mc = mc_major + '.2'
-			def mappings = 19
+
+			// // Build Tools // //
+			version('loom', '1.0.+')
+
+			plugin('loom', 'org.quiltmc.loom').versionRef('loom')
 
 			// // Base // //
 			version('minecraft', mc)
-			version('ql', "0.17.4")
-			version('quiltMappings', "${mc}+build.${mappings}")
+			version('ql', "0.17.10")
+			version('qm', "${mc}+build.21")
+			version('qsl', "3.0.0-beta.29+${mc}")
+			version('qfapi', "4.0.0-beta.28+0.73.2-${mc}")
 
 			library('minecraft', 'mojang', 'minecraft').versionRef('minecraft')
 			library('ql', 'org.quiltmc', 'quilt-loader').versionRef('ql')
-			library('quiltMappings', 'org.quiltmc', 'quilt-mappings').versionRef('quiltMappings')
+			library('qm', 'org.quiltmc', 'quilt-mappings').versionRef('qm')
+			library('qsl', 'org.quiltmc', 'qsl').versionRef('qsl')
+			library('qfapi', 'org.quiltmc.quilted-fabric-api', 'quilted-fabric-api',).versionRef('qfapi')
 
 			// // Libraries // //
-			version('nbtCrafting', "2.2.1+mc${mc_major}")
+			version('nbtCrafting', "2.2.3+mc${mc_major}")
 
 			library('nbtCrafting', 'de.siphalor', 'nbtcrafting-' + mc_major).versionRef('nbtCrafting')
 
