--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@ org.gradle.parallel = true
 # Mod Properties
 version = 1.1.0
 maven_group = folk.sisby
-archives_base_name = tinkerers-smithing
+archives_base_name = tinkerers_smithing
