--- a/settings.gradle
+++ b/settings.gradle
@@ -20,16 +20,16 @@ dependencyResolutionManagement {
 			def mc = mc_major + '.2'
 
 			// // Build Tools // //
-			version('loom', '1.0.+')
+			version('loom', '1.2.+')
 
 			plugin('loom', 'org.quiltmc.loom').versionRef('loom')
 
 			// // Base // //
 			version('mc', mc)
-			version('ql', "0.17.10")
-			version('qm', "${mc}+build.21")
+			version('ql', "0.19.0")
+			version('qm', "${mc}+build.22")
 			version('qsl', "3.0.0-beta.29+${mc}")
-			version('qfapi', "4.0.0-beta.28+0.73.2-${mc}")
+			version('qfapi', "4.0.0-beta.30+0.76.0-${mc}")
 
 			library('mc', 'mojang', 'minecraft').versionRef('mc')
 			library('ql', 'org.quiltmc', 'quilt-loader').versionRef('ql')
@@ -38,9 +38,9 @@ dependencyResolutionManagement {
 			library('qfapi', 'org.quiltmc.quilted-fabric-api', 'quilted-fabric-api',).versionRef('qfapi')
 
 			// // Libraries // //
-			version('emi', "0.7.3+${mc}")
+			version('emi', "1.0.4+${mc}")
 
-			library('emi', 'dev.emi', 'emi').versionRef('emi')
+			library('emi', 'dev.emi', 'emi-fabric').versionRef('emi')
 		}
 	}
 }
