--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,11 @@ if (System.getenv("GITHUB_TOKEN")) {
 archivesBaseName = project.archives_base_name
 
 def mc_major = '1.19'
-def mc = mc_major + '.2'
+def mc = mc_major + '.3'
 def default_branch = '1.19'
 
 def origVersion = project.version
-project.version = project.version + "+" + mc_major
+project.version = project.version + "+" + mc
 group = project.maven_group
 
 repositories {
