--- a/settings.gradle
+++ b/settings.gradle
@@ -16,8 +16,8 @@ pluginManagement {
 dependencyResolutionManagement {
 	versionCatalogs {
 		libs {
-			def mc_major = '1.19'
-			def mc = mc_major + '.4'
+			def mc_major = '1.20'
+			def mc = mc_major + ''
 
 			// // Build Tools // //
 			version('loom', '1.2.+')
@@ -27,9 +27,9 @@ dependencyResolutionManagement {
 			// // Base // //
 			version('mc', mc)
 			version('ql', "0.19.0")
-			version('qm', "${mc}+build.10")
-			version('qsl', "5.0.0-beta.10+${mc}")
-			version('qfapi', "6.0.0-beta.9+0.83.0-${mc}")
+			version('qm', "${mc}+build.4")
+			version('qsl', "6.0.1+${mc}")
+			version('qfapi', "7.0.1+0.83.0-${mc}")
 
 			library('mc', 'mojang', 'minecraft').versionRef('mc')
 			library('ql', 'org.quiltmc', 'quilt-loader').versionRef('ql')
@@ -38,7 +38,7 @@ dependencyResolutionManagement {
 			library('qfapi', 'org.quiltmc.quilted-fabric-api', 'quilted-fabric-api',).versionRef('qfapi')
 
 			// // Libraries // //
-			version('emi', "1.0.4+${mc}")
+			version('emi', "1.0.3+${mc}")
 
 			library('emi', 'dev.emi', 'emi-fabric').versionRef('emi')
 		}
