--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ dependencyResolutionManagement {
 		libs {
 			def mc_major = '1.19'
 			def mc = mc_major + '.2'
+			def fapi = "0.76.0"
 
 			// // Build Tools // //
 			version('loom', '1.2.+')
@@ -29,7 +30,8 @@ dependencyResolutionManagement {
 			version('ql', "0.19.0")
 			version('qm', "${mc}+build.22")
 			version('qsl', "3.0.0-beta.29+${mc}")
-			version('qfapi', "4.0.0-beta.30+0.76.0-${mc}")
+			version('fapi', "${fapi}-${mc}")
+			version('qfapi', "4.0.0-beta.30+${fapi}-${mc}")
 
 			library('mc', 'mojang', 'minecraft').versionRef('mc')
 			library('ql', 'org.quiltmc', 'quilt-loader').versionRef('ql')
