adjust compatible versions

--- a/build.gradle
+++ b/build.gradle
@@ -100,10 +100,9 @@ if (System.getenv("MODRINTH_TOKEN")) {
 		versionType = 'release'
 		uploadFile = remapJar
 		gameVersions = [mc, '1.20.1']
-		loaders = ['quilt', 'fabric']
+		loaders = ['quilt', 'fabric', 'forge']
 		detectLoaders = false
 		dependencies {
-			required.project "qsl"
 			optional.project "emi"
 			optional.project "yttr"
 		}
