--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,12 @@
 # Gradle Properties
-org.gradle.jvmargs = -Xmx1G
-org.gradle.parallel = true
-
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.caching.debug=false
+org.gradle.configureondemand=true
+# Enable advanced multi-module optimizations (share tiny-remaper instance between projects)
+fabric.loom.multiProjectOptimisation=true
 # Mod Properties
-version = 2.5.1
-maven_group = folk.sisby
-archives_base_name = tinkerers_smithing
+baseVersion = 2.5.1
+defaultBranch = 1.19
+branch = 1.19
