--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -3,13 +3,13 @@ loom = "1.2.+"
 githubRelease = "2.4.1"
 minotaur = "2.6.0"
 
-mc = "1.19.4"
+mc = "1.20.1"
 ql = "0.19.0"
-qm = "1.19.4+build.10"
-fapi = "0.83.0-1.19.4"
-qfapi = "6.0.0-beta.9+0.83.0-1.19.4"
+qm = "1.20.1+build.23"
+fapi = "0.83.0-1.20"
+qfapi = "7.0.2+0.83.0-1.20.1"
 
-emi = "1.0.4+1.19.4"
+emi = "1.0.4+1.20.1"
 
 [plugins]
 loom = { id = "org.quiltmc.loom", version.ref = "loom" }
