--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -3,13 +3,13 @@ loom = "1.2.+"
 githubRelease = "2.4.1"
 minotaur = "2.6.0"
 
-mc = "1.19.2"
+mc = "1.18.2"
 ql = "0.19.0"
-qm = "1.19.2+build.22"
-fapi = "0.76.0-1.19.2"
-qfapi = "4.0.0-beta.30+0.76.0-1.19.2"
+qm = "1.18.2+build.26"
+fapi = "0.67.0-1.18.2"
+qfapi = "1.0.0-beta.28+0.67.0-1.18.2"
 
-emi = "1.0.4+1.19.2"
+emi = "0.7.3+1.18.2"
 
 [plugins]
 loom = { id = "org.quiltmc.loom", version.ref = "loom" }
@@ -22,4 +22,4 @@ ql = { group = "org.quiltmc", name = "quilt-loader", version.ref = "ql" }
 qm = { group = "org.quiltmc", name = "quilt-mappings", version.ref = "qm" }
 qfapi = { group = "org.quiltmc.quilted-fabric-api", name = "quilted-fabric-api", version.ref = "qfapi" }
 
-emi = { group = "dev.emi", name = "emi-fabric", version.ref = "emi" }
+emi = { group = "dev.emi", name = "emi", version.ref = "emi" }
